make socket object global

--- a/boilerplate/public/index.html
+++ b/boilerplate/public/index.html
@@ -7,6 +7,9 @@
   <body>
     <div id="root"></div>
     <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript">
+      var socket = io('/');
+    </script>
     <script src="/dist/app.min.js"></script>
   </body>
 </html>
