complete chat application

--- a/slides/index.htm
+++ b/slides/index.htm
@@ -196,15 +196,12 @@ Communication between server and client is bidirectional.
 ]
 .right-column[
 
-- ```js
-  socket.emit( 'event', {
-      message: 'Hello World!'
-  } );
-  ```
-- ```js
-  socket.on( 'event', function( payload ) {
-      console.log( payload ); // { message: 'Hello World!' }
-  } );
+- `https://github.com/rogermadjos/socket.io-talk.git`
+- ```bash
+  npm install -g gulp-cli
+  npm install
+  gulp
+  node index.js
   ```
 ]
     </textarea>
