--- a/chat/public/index.html
+++ b/chat/public/index.html
@@ -12,6 +12,10 @@
     </div>
     <script src="/dist/jquery/jquery.min.js"></script>
     <script src="/dist/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io('/');
+    </script>
     <script src="/dist/app.min.js"></script>
   </body>
 </html>
